# generic-preserver

./: .dockerignore  .envrc.ps1.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
src/mclib/template/: abstract_manager.py  helpers.py  interface.py
src/mclib/template/application/: cli.py
src/mclib/template/callback/: __init__.py  template.py
src/mclib/template/integration/: manager.py  vendor_1.py
src/mclib/template/schema/: __init__.py  log.py  request.py  response.py  vendor.py
tests/: test_abstraction.py  test_inheritance.py
tests/template/: test_sample.py
tests/template/application/: test_cli_via_runner.py  test_cli_via_subprocess.py
